--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,37 @@
 body {
     box-sizing: border-box;
-    background-color: rgb(21, 21, 122);
+    background-color: rgb(23, 14, 151);
     font-weight: bold;
-}
-footer {
     margin: 0 auto;
     width: 85%;
+}
+.score{
     background-color: white;
     padding: 1rem;
-    
+    margin-top: 1rem;
+    box-sizing: border-box;
 }
-div.conteyner {
-    width: 22%;
-    display: inline-block;
+div.conteiner {
+    box-sizing: border-box;
+    width: 25%;
+    float: left;
     border: 1px solid rgb(153, 139, 139);
     min-width: 150px;
     max-width: 350px;
-    padding: 1rem 1rem 0 1rem;
+    padding: 1rem 1rem 0;
     border-radius: 0.5rem;
     position: relative;
+    background-color: white;
 }
-div.conteyner-img {
+.conteiner:hover {
+    transform: rotate(3deg);
+    z-index: 1;
+}
+.conteiner:nth-child(2):hover {
+    box-shadow: 0 0 1rem black;
+    transition: box-shadow 300ms linear;
+}
+div.conteiner-img {
     text-align: center;
 }
 img {
@@ -28,14 +39,14 @@ img {
 }
 img.icon {
     cursor: pointer;
-    width: 13%;
+    width: 3rem;
     position: absolute;
     top: 0;
     right: 0;
     border-radius: 6px;
 }
 div.main {
-    width: 25%;
+    
 }
 ul {
     list-style-type: none;
@@ -63,4 +74,21 @@ div.main:hover ul {
 .main ul li:hover {
     background-color: rgb(71, 83, 192);
     color: white;
+    animation: ch-color-1 2s forwards;
+}
+@keyframes ch-color-1 {
+    from {
+      background-color: rgb(31, 214, 214);
+    }
+    50% {
+      background-color: rgb(0, 255, 13);
+    }
+    to {
+      background-color: rgb(0, 4, 255);
+    }
+}
+.clearfix::after {
+    content: ' ';
+    display: block;
+    clear: both;
 }
